--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="style.css">
     <!-- Google Font start -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;1,100;1,200&display=swap" rel="stylesheet">
-<!-- Google Font end -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;1,100;1,200&display=swap"
+        rel="stylesheet">
+    <!-- Google Font end -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -1535,7 +1536,7 @@ void main () {
         </div>
     </div>
 
-    <div class="contact_us_sec" >
+    <div class="contact_us_sec">
 
 
 
@@ -1555,9 +1556,9 @@ void main () {
                 <label>Mobile number:</label><br>
                 <input type="number" name="Phone" class="input">
             </div>
-            <!-- <div class="input_group">
-                <input type="text" name="name" class="input">
-            </div> -->
+            <div class="input_group" style="display: none;">
+                <input type="text" id="dateInput1" name="Date">
+            </div>
             <div class="input_group">
 
                 <label style="visibility: hidden;">Name:</label><br>
@@ -1600,9 +1601,7 @@ void main () {
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form method="post" action=""
-                        
-                        autocomplete="off" name="google-sheet" class="form">
+                    <form method="post" action="" name="google-sheet" class="form">
                         <div class="input_group">
                             <label>Name:</label><br>
                             <input type="text" name="Name" placeholder="Enter your name" class="input">
@@ -1614,6 +1613,9 @@ void main () {
                         <div class="input_group">
                             <label>Mobile number:</label><br>
                             <input type="number" name="Phone" placeholder="Enter your Mobile number" class="input">
+                        </div>
+                        <div class="input_group" style="display: none;">
+                            <input type="date" id="dateInput" name="Date">
                         </div>
 
                         <div class="input_group">
@@ -1646,9 +1648,9 @@ void main () {
         const scriptURL1 = 'https://script.google.com/macros/s/AKfycbxduRpewfGCHHPlya6_qSBvCCl1GqAdC4oj1VxHWtJ7vwVjO4hUsjjFaVthGBwuJg09/exec'
         const form1 = document.forms['google-sheet1']
 
-        form.addEventListener('submit', e => {
+        form1.addEventListener('submit', e => {
             e.preventDefault()
-            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+            fetch(scriptURL1, { method: 'POST', body: new FormData(form1) })
                 .then(response => alert("Thank you! your form is submitted successfully."))
                 .then(() => { window.location.reload(); })
                 .catch(error => console.error('Error!', error.message))
@@ -1656,6 +1658,24 @@ void main () {
     </script>
 
     <script>
+        const dateInput1 = document.getElementById('dateInput1');
+        const currentDate1 = dateFunction()
+        const dateInput = document.getElementById('dateInput');
+        const currentDate = dateFunction()
+        function dateFunction() {
+            const date = new Date();
+
+            let day = date.getDate();
+            let month = date.getMonth() + 1;
+            let year = date.getFullYear();
+
+            // This arrangement can be altered based on how we want the date's format to appear.
+            let currentDate = `${day}-${month}-${year}`;
+            return currentDate;
+        }
+
+
+
         $(window).on('load', function () {
             var delayMs = 1500; // delay in milliseconds
 
