Update project code

--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@ void main () {
         </div>
     </div>
 
-
+<div class="body_root">
 
     <div class="hero_sec">
         <div class="banner_content">
@@ -1632,6 +1632,11 @@ void main () {
             </div>
         </div>
     </div>
+
+
+</div>
+
+
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbxduRpewfGCHHPlya6_qSBvCCl1GqAdC4oj1VxHWtJ7vwVjO4hUsjjFaVthGBwuJg09/exec'
         const form = document.forms['google-sheet']
