Update project code

--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@ void main () {
         </div>
     </div>
 
-<div class="body_root">
+<!-- <div class="body_root"> -->
 
     <div class="hero_sec">
         <div class="banner_content">
@@ -1634,7 +1634,7 @@ void main () {
     </div>
 
 
-</div>
+<!-- </div> -->
 
 
     <script>
